--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -135,6 +135,8 @@
     <ClCompile Include="Tema0-6.cpp" />
     <ClCompile Include="Tema0-7.cpp" />
     <ClCompile Include="Tema1-1.cpp" />
+    <ClCompile Include="Tema1-2.cpp" />
+    <ClCompile Include="Tema1-3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
