--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -137,6 +137,8 @@
     <ClCompile Include="Tema1-1.cpp" />
     <ClCompile Include="Tema1-2.cpp" />
     <ClCompile Include="Tema1-3.cpp" />
+    <ClCompile Include="Tema1-4.cpp" />
+    <ClCompile Include="Tema1-5.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
