--- a/EDA2/EDA2/EDA2.vcxproj.filters
+++ b/EDA2/EDA2/EDA2.vcxproj.filters
@@ -57,5 +57,11 @@
     <ClCompile Include="Tema1-5.cpp">
       <Filter>Archivos de origen\Tema1</Filter>
     </ClCompile>
+    <ClCompile Include="Tema1-6.cpp">
+      <Filter>Archivos de origen\Tema1</Filter>
+    </ClCompile>
+    <ClCompile Include="Tema1-7.cpp">
+      <Filter>Archivos de origen\Tema1</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
