--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Tema1-5.cpp" />
     <ClCompile Include="Tema1-6.cpp" />
     <ClCompile Include="Tema1-7.cpp" />
+    <ClCompile Include="Tema2-1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
