--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -141,7 +141,10 @@
     <ClCompile Include="Tema1-5.cpp" />
     <ClCompile Include="Tema1-6.cpp" />
     <ClCompile Include="Tema1-7.cpp" />
+    <ClCompile Include="Tema2-03.cpp" />
+    <ClCompile Include="Tema2-04.cpp" />
     <ClCompile Include="Tema2-1.cpp" />
+    <ClCompile Include="Tema2-2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
