--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Tema2-05.cpp" />
     <ClCompile Include="Tema0-1.cpp" />
     <ClCompile Include="Tema0-2.cpp" />
     <ClCompile Include="Tema0-3.cpp" />
