--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="Tema1-7.cpp" />
     <ClCompile Include="Tema2-03.cpp" />
     <ClCompile Include="Tema2-04.cpp" />
+    <ClCompile Include="Tema2-06.cpp" />
     <ClCompile Include="Tema2-1.cpp" />
     <ClCompile Include="Tema2-2.cpp" />
   </ItemGroup>
