--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -146,7 +146,9 @@
     <ClCompile Include="Tema2-04.cpp" />
     <ClCompile Include="Tema2-06.cpp" />
     <ClCompile Include="Tema2-07.cpp" />
+    <ClCompile Include="Tema2-08.cpp" />
     <ClCompile Include="Tema2-1.cpp" />
+    <ClCompile Include="Tema2-11.cpp" />
     <ClCompile Include="Tema2-2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
