--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Tema2-06.cpp" />
     <ClCompile Include="Tema2-07.cpp" />
     <ClCompile Include="Tema2-08.cpp" />
+    <ClCompile Include="Tema2-09.cpp" />
     <ClCompile Include="Tema2-1.cpp" />
     <ClCompile Include="Tema2-11.cpp" />
     <ClCompile Include="Tema2-2.cpp" />
