--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Tema2-1.cpp" />
     <ClCompile Include="Tema2-10.cpp" />
     <ClCompile Include="Tema2-11.cpp" />
+    <ClCompile Include="Tema2-12.cpp" />
     <ClCompile Include="Tema2-2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
