--- a/Tema 4/4_2/4_2.vcxproj
+++ b/Tema 4/4_2/4_2.vcxproj
@@ -128,7 +128,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="4_2.cpp" />
-    <ClCompile Include="horas.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Horas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
