--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -153,6 +153,10 @@
     <ClCompile Include="Tema2-11.cpp" />
     <ClCompile Include="Tema2-12.cpp" />
     <ClCompile Include="Tema2-2.cpp" />
+    <ClCompile Include="Tema4-01.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Set.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
