--- a/Tema 4/4-1/4-1/4-1.vcxproj.filters
+++ b/Tema 4/4-1/4-1/4-1.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Set.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
