--- a/EDA2/EDA2/EDA2.vcxproj.filters
+++ b/EDA2/EDA2/EDA2.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClCompile Include="Tema4-01.cpp">
       <Filter>Archivos de origen\Tema4</Filter>
     </ClCompile>
+    <ClCompile Include="Tema4-2.cpp">
+      <Filter>Archivos de origen\Tema4</Filter>
+    </ClCompile>
+    <ClCompile Include="Tema4-05.cpp">
+      <Filter>Archivos de origen\Tema4</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Set.h">
