--- a/4-6/4-6.vcxproj.filters
+++ b/4-6/4-6.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="4-3.cpp">
+    <ClCompile Include="4-6.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Polinomio.h">
+    <ClInclude Include="Set.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
