--- a/4-4/4-4.vcxproj
+++ b/4-4/4-4.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{818a08d8-9d95-4d90-b057-6a51ffe2dd5a}</ProjectGuid>
-    <RootNamespace>My43</RootNamespace>
+    <ProjectGuid>{3a25c0bc-5577-49a0-bb8a-0c83bab806b8}</ProjectGuid>
+    <RootNamespace>My44</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,10 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="4-3.cpp" />
+    <ClCompile Include="4-4.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Polinomio.h" />
+    <ClInclude Include="Hora.h" />
+    <ClInclude Include="Pelicula.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
