--- a/4-6/4-6.vcxproj
+++ b/4-6/4-6.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{818a08d8-9d95-4d90-b057-6a51ffe2dd5a}</ProjectGuid>
-    <RootNamespace>My43</RootNamespace>
+    <ProjectGuid>{7d93106c-ddf3-4895-a01a-221af2e7ca1e}</ProjectGuid>
+    <RootNamespace>My46</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="4-3.cpp" />
+    <ClCompile Include="4-6.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Polinomio.h" />
+    <ClInclude Include="Set.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
