--- a/4-7/4-7.vcxproj
+++ b/4-7/4-7.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{818a08d8-9d95-4d90-b057-6a51ffe2dd5a}</ProjectGuid>
-    <RootNamespace>My43</RootNamespace>
+    <ProjectGuid>{5944b588-0426-439a-8107-8d3367f140b2}</ProjectGuid>
+    <RootNamespace>My47</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="4-3.cpp" />
+    <ClCompile Include="4-7.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Polinomio.h" />
+    <ClInclude Include="Set.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
