y lo subo y me la pela y soy pro y lo termino en 1 h y punch

--- a/EDA2/EDA2/EDA2.vcxproj
+++ b/EDA2/EDA2/EDA2.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Tema4-01.cpp" />
     <ClCompile Include="Tema4-05.cpp" />
     <ClCompile Include="Tema4-2.cpp" />
+    <ClCompile Include="Tema4-8.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Set.h" />
