--- a/4/4-1/4-1.vcxproj
+++ b/4/4-1/4-1.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="4-1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Set.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
