Lo que he podido del tema 4

--- a/Juez4_4/Juez4_4.vcxproj.filters
+++ b/Juez4_4/Juez4_4.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Hora.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Pelicula.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
