--- a/Juez4_3/Juez4_3.vcxproj
+++ b/Juez4_3/Juez4_3.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Juez4_3.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Juez0_5\Polinomio.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
