--- a/Juez4_3/Juez4_3.vcxproj.filters
+++ b/Juez4_3/Juez4_3.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Juez0_5\Polinomio.h">
+      <Filter>Archivos de encabezado</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
