--- a/Juez4_4/Juez4_4.vcxproj
+++ b/Juez4_4/Juez4_4.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="Juez4_4.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Pelicula.h" />
+    <ClInclude Include="Hora.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
