--- a/Juez4_5/Juez4_5.vcxproj
+++ b/Juez4_5/Juez4_5.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Juez4_5.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Set.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
