--- a/5-10/5-10.vcxproj.filters
+++ b/5-10/5-10.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="5-5.cpp">
+    <ClCompile Include="5-10.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\5-4\queue_eda.h">
+    <ClInclude Include="queue_eda.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
